--- a/index.html
+++ b/index.html
@@ -4,6 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+    <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <nav class="navbar">
+      <a href="#" class="navbar-logo">HOMI<span>GO.</span></a>
+
+      <div class="navbar-nav">
+        <a href="#home">Home</a>
+        <a href="#our-profile">Our Profile</a>
+        <a href="#product">Product</a>
+        <a href="#message-us">Message Us</a>
+      </div>
+
+      <div class="navbar-extra">
+        <a href="#" id="contact"
+          ><i data-feather="phone"></i><span class="label">Contact</span></a
+        >
+        <a href="#" id="hamburger"><i data-feather="menu"></i></a>
+      </div>
+    </nav>
+  </body>
 </html>
