add vision mission and footer image

--- a/index.html
+++ b/index.html
@@ -81,6 +81,39 @@
     </section>
     <!-- About End -->
 
+    <!-- Vision & Mission Start -->
+    <section class="vision-mission">
+      <h2>Our <span>Vision Mission</span></h2>
+
+      <div class="visionMission-grid">
+        <!-- Vision -->
+        <div class="visionMission-card">
+          <div class="vision">
+            <h3 class="visionMission-title">Vision</h3>
+            <p class="visionMission-description">
+              To be the leading car rental service that is trusted, comfortable,
+              and modern in Indonesia.
+            </p>
+          </div>
+        </div>
+
+        <!-- Mission -->
+        <div class="visionMission-card">
+          <div class="mission">
+            <h3 class="visionMission-title">Mission</h3>
+            <ul class="visionMission-description">
+              <li>
+                Provide high-quality vehicles with a seamless booking system.
+              </li>
+              <li>Ensure safety and comfort for every customer.</li>
+              <li>Innovate continuously through technology.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Vision & Mission End -->
+
     <!-- Service Start  -->
     <section class="service" id="service">
       <h2>Our <span>Service</span></h2>
@@ -172,6 +205,18 @@
       </div>
     </section>
     <!-- Advantages End -->
+
+    <!-- Footer Image Start -->
+    <section class="footer-bonus">
+      <div class="footer-container">
+        <div class="footer-content">
+          <h2>Let’s explore the city with Nava Rent Car.</h2>
+          <a href="#" class="cta-footer">Explore Now</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer Image End -->
 
     <!-- Contact Form Start -->
     <section class="contact-section" id="message-us">
