add card vehicle

--- a/index.html
+++ b/index.html
@@ -178,6 +178,87 @@
     </section>
     <!-- Service End  -->
 
+    <!-- Vehicle Card Start -->
+    <section class="popular-vehicles-section">
+      <h2 class="section-title"><span>Popular</span> Vehicle</h2>
+      <p class="section-subtitle">Explore Without Limits, Drive With Nava</p>
+
+      <div class="vehicles-grid">
+        <!-- Vehicle Card 1 = All New Pajero -->
+        <div class="vehicle-card">
+          <div class="vehicle-header">
+            <span class="vehicle-name">All New Pajero</span>
+            <i class="far fa-heart favorite-icon"></i>
+            <!-- Using far for outline heart -->
+          </div>
+          <img
+            src="asset/Pajero-Card.jpg"
+            alt="All New Pajero"
+            class="vehicle-image"
+          />
+          <div class="vehicle-footer">
+            <span class="vehicle-price">Rp.700K/ day</span>
+            <a href="#" class="rent-button">Rent Now</a>
+          </div>
+        </div>
+
+        <!-- Vehicle Card 2 = All New Rush -->
+        <div class="vehicle-card">
+          <div class="vehicle-header">
+            <span class="vehicle-name">All New Rush</span>
+            <i class="far fa-heart favorite-icon"></i>
+            <!-- Using far for outline heart -->
+          </div>
+          <img
+            src="asset/rush-card.jpg"
+            alt="All New Pajero"
+            class="vehicle-image"
+          />
+          <div class="vehicle-footer">
+            <span class="vehicle-price">Rp.400K/ day</span>
+            <a href="#" class="rent-button">Rent Now</a>
+          </div>
+        </div>
+
+        <!-- Vehicle Card 3 = Innova Zenix -->
+        <div class="vehicle-card">
+          <div class="vehicle-header">
+            <span class="vehicle-name">Innova Zenix</span>
+            <i class="far fa-heart favorite-icon"></i>
+            <!-- Using far for outline heart -->
+          </div>
+          <img
+            src="asset/zenix-card.jpg"
+            alt="All New Pajero"
+            class="vehicle-image"
+          />
+          <div class="vehicle-footer">
+            <span class="vehicle-price">Rp.400K/ day</span>
+            <a href="#" class="rent-button">Rent Now</a>
+          </div>
+        </div>
+
+        <!-- Vehicle Card 4 = Hyundai Creta -->
+        <div class="vehicle-card">
+          <div class="vehicle-header">
+            <span class="vehicle-name">Hyundai Creta</span>
+            <i class="far fa-heart favorite-icon"></i>
+            <!-- Using far for outline heart -->
+          </div>
+          <img
+            src="asset/hyundai-card.jpg"
+            alt="All New Pajero"
+            class="vehicle-image"
+          />
+          <div class="vehicle-footer">
+            <span class="vehicle-price">Rp.400K/ day</span>
+            <a href="#" class="rent-button">Rent Now</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Vehicle Card End -->
+
     <!-- Advantages Start-->
 
     <section id="advantage" class="advantages">
